--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,120 @@
-body {
-  background-color: #000;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  overflow: hidden;
+}
+
+.left-panel {
+  width: 30%;
+  height: 100vh;
+  background-color: #e4e4e4;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.right-panel {
+  width: 70%;
+  height: 100vh;
+  overflow-y: auto;
+}
+
+.btn-bar {
+  display: flex;
+  justify-content: space-between;
+  width: inherit;
+  padding: 10px;
+  border-top: 1px solid #cdcccc;
+  position: fixed;
+  bottom: 0;
+}
+
+.new-list-container {
+  position: fixed;
+  bottom: 4%;
+  border: none;
+  width: inherit;
+  border-top: 1px solid #cdcccc;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px;
+  max-height: 0;
+  transition: max-height .5s ease-in-out;
+  z-index: -1;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.requirements {
+  padding: 5px;
+}
+
+.inputs {
+  border: 1px solid #166AC5;
+  border-radius: 6px;
+  transition: all 0.15s ease;
+  padding: 5px 8px;
+  font-size: 16px;
+}
+
+.inputs:focus {
+  outline: none;
+  box-shadow: inset 0 0 0 .5px #166AC5;
+}
+
+#add-list-btn,
+#filter-btn {
+  font-weight: bold;
+  color: #707070;
+  justify-content: space-around;
+}
+
+#close-list-btn {
+  padding: 5px 10px;
+  height: auto;
+  font-size: 16px;
+
+}
+
+#add-list-btn {
+  width: 25%;
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  border: none;
+  background-color: transparent;
+  border-radius: 6px;
+  padding-inline: 6px;
+  padding-block: 2px;
+  transition: all 0.15s ease;
+}
+
+.buttons:hover {
+  cursor: pointer;
+  background-color: #cdcccc;
+}
+
+.buttons:active {
+  opacity: 0.7;
+  transition: none;
+}
+
+@media (max-width: 1182px) {
+  #add-list-btn {
+    width: 40%;
+  }
+}
+
+@media (max-width: 780px) {
+  #add-list-btn {
+    width: 80%;
+  }
 }
