--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@
 .right-panel {
   width: 80%;
   height: 100vh;
-  background-color: #166A;
+  background-color: #fff;
   overflow: auto;
 }
 
@@ -103,13 +103,6 @@ li {
 .invalid {
   animation: shake 0.2s ease-in-out 0s 2;
   background-color: #ff110014;
-}
-
-#add-list-btn,
-#filter-btn {
-  font-weight: bold;
-  color: #707070;
-  justify-content: space-around;
 }
 
 #close-list-btn {
@@ -208,16 +201,12 @@ li {
   justify-content: space-between;
   align-items: center;
   border: none;
+  background-color: transparent;
+  width: 100%;
   border-radius: 8px;
   margin-bottom: 10px;
   padding-inline: 10px;
   transition: background-color 0.15s ease;
-}
-
-#list-btn {
-  background-color: transparent;
-  transition: background-color 0.15s ease;
-  width: 100%;
 }
 
 #list-btn:focus-within {
@@ -228,6 +217,30 @@ li {
   justify-content: start;
 }
 
+.space-around {
+  justify-content: space-around;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.light-gray {
+  color: #707070;
+}
+
+.bgColor-white {
+  background-color: #fff;
+}
+
+.nav-panel {
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  padding: 50px 20px;
+  overflow: auto;
+}
+
 @media (max-width: 1280px) {
   #add-list-btn {
     width: 50%;
@@ -235,7 +248,7 @@ li {
 
   #list-name {
     width: 100%;
-    margin-right: 20px;
+    margin: auto;
   }
 
 }
@@ -271,9 +284,5 @@ li {
 @media (max-width: 780px) {
   #add-list-btn {
     width: 80%;
-  }
-  
-  #list-name {
-    margin: auto;
   }
 }
