--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,31 @@
   bottom: 0;
 }
 
+.header-wrapper {
+  margin-bottom: 3rem;
+  border-bottom: 1px solid #cdcccc;
+  padding-bottom: 50px;
+}
+
+.new-task-container {
+  position: fixed;
+  bottom: 4%;
+  border: none;
+  width: inherit;
+  border-top: 1px solid #cdcccc;
+  background-color: #e4e4e4;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px;
+  max-height: 0px;
+  height: 100%;
+  z-index: -1;
+  transition: max-height .2s ease-in-out;
+  overflow: auto;
+  border-left: 1px solid #cdcccc;
+}
+
 .new-list-container {
   position: fixed;
   bottom: 4%;
@@ -109,7 +134,11 @@ li {
   padding: 5px 10px;
   height: auto;
   font-size: 16px;
+}
 
+#close-task-btn {
+  font-size: 1.1rem;
+  padding: 8px;
 }
 
 #add-list-btn {
@@ -143,9 +172,11 @@ li {
 .left-panel .main-container {
   background-color: #e4e4e4;
   height: 100%;
-  max-height: 500px;
+  max-height: 446px;
   width: 100%;
-  padding: 10px;  
+  padding: 10px;
+  border: none;
+  overflow: auto;
 }
 
 .today-upcoming-container {
@@ -203,7 +234,7 @@ li {
   border: none;
   background-color: transparent;
   width: 100%;
-  border-radius: 8px;
+  border-radius: 6px;
   margin-bottom: 10px;
   padding-inline: 10px;
   transition: background-color 0.15s ease;
@@ -221,12 +252,43 @@ li {
   justify-content: space-around;
 }
 
+.space-between {
+  justify-content: space-between;
+}
+
+.align-center {
+  align-items: center;
+}
+
 .bold {
   font-weight: bold;
 }
 
+.semi-bold {
+  font-weight: 500;
+}
+
+.margin-right {
+  margin-right: 15px;
+}
+
 .light-gray {
   color: #707070;
+}
+
+.flex {
+  display: flex;
+}
+
+.checkbox-task-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkbox-task-wrapper input {
+  margin-right: 12px;
+  transform: scale(1.3);
 }
 
 .bgColor-white {
@@ -237,8 +299,73 @@ li {
   background-color: #fff;
   width: 100%;
   height: 100%;
-  padding: 50px 20px;
+  padding: 50px 70px;
   overflow: auto;
+}
+
+.text-btn-wrap {
+  border: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#list-desc {
+  border: none;
+  box-shadow: 0 0 3px 1px #cdcccc;
+  border-radius: 6px;
+  padding: 6px;
+  padding-inline: 10px;
+  font-size: 17px;
+  width: 100%;
+  transition: box-shadow 0.2s ease;
+  margin-top: 10px;
+}
+
+#list-desc:focus {
+  outline: none;
+  box-shadow: 0 0 3px 1.5px #a2a1a1;
+}
+
+#delete-list-icon {
+  font-size: 1.4rem;
+  padding: 10px;
+}
+
+#delete-task-icon {
+  font-size: 1.1rem;
+  padding: 8px;
+  color: #d95050;
+  margin-left: 30px;
+}
+
+.task-wrapper {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  color: #2c2c2c;
+  font-size: 1rem;
+  width: 100%;
+}
+
+.date-marks {
+  margin-right: 10px;
+  border-radius: 6px;
+  text-align: center;
+  border: none;
+  background-color: #cdcccc;
+  padding-inline: 6px;
+  font-size: 14px;
+  font-weight: 500;
+  width: 100%;
+}
+
+.date-marks:hover {
+  cursor: default;
+}
+
+.width {
+  width: 100px;
 }
 
 @media (max-width: 1280px) {
@@ -267,6 +394,24 @@ li {
   }
 }
 
+@media (max-width: 910px) {
+  .task-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .checkbox-task-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+   
+  }
+
+  .task-wrapper {
+    font-size: 15px;
+  }
+}
+
 @media (max-width: 840px) {
   .wrapper {
     flex-direction: column;
@@ -284,5 +429,31 @@ li {
 @media (max-width: 780px) {
   #add-list-btn {
     width: 80%;
+  }
+}
+
+@media (max-width: 590px) {
+  .task-wrapper {
+    font-size: 14px;
+  }
+
+  .text-btn-wrap h1 {
+    font-size: 26px;
+  }
+
+  .text-btn-wrap #delete-list-icon {
+    font-size: 20px;
+  }
+}
+
+@media (max-height: 435px) {
+  .new-task-container {
+    bottom: 8%;
+  }
+}
+
+@media (max-height: 315px) {
+  .new-task-container {
+    bottom: 10%;
   }
 }
