added tasks functionality for the main logic

--- a/src/styles.css
+++ b/src/styles.css
@@ -54,7 +54,7 @@
   justify-content: space-between;
   padding: 10px;
   max-height: 0px;
-  height: 100%;
+  height: auto;
   z-index: -1;
   transition: max-height .2s ease-in-out;
   overflow: auto;
@@ -106,6 +106,10 @@ h3 {
   box-shadow: inset 0 0 0 .5px #166AC5;
 }
 
+.input-wrapper input {
+  width: 30%;
+}
+
 li {
   list-style: none;
 }
@@ -115,23 +119,13 @@ li {
   margin-left: 10px;
 }
 
-@keyframes shake {
-  0% {
-    margin-left: 0rem;
-  }
-  25% {
-    margin-left: 0.1rem;
-  }
-  75% {
-    margin-left: -0.1rem;
-  }
-  100% {
-    margin-left: 0rem;
-  }
-}
-
 .invalid {
   animation: shake 0.2s ease-in-out 0s 2;
+  background-color: #ff110014;
+}
+
+.invalid-date {
+  animation: shake-date 0.2s ease-in-out 0s 2;
   background-color: #ff110014;
 }
 
@@ -273,8 +267,8 @@ li {
   font-weight: 500;
 }
 
-.margin-right {
-  margin-right: 15px;
+.margin-inline {
+  margin-inline: 15px;
 }
 
 .light-gray {
@@ -380,6 +374,41 @@ li {
   align-items: center;
 }
 
+.date-pattern {
+  color: #0000ff;
+  text-decoration: underline;
+}
+
+@keyframes shake {
+  0% {
+    margin-left: 0rem;
+  }
+  25% {
+    margin-left: 14px;
+  }
+  75% {
+    margin-left: 14px;
+  }
+  100% {
+    margin-left: 0rem;
+  }
+}
+
+@keyframes shake {
+  0% {
+    margin-left: 0rem;
+  }
+  25% {
+    margin-left: 0.1rem;
+  }
+  75% {
+    margin-left: -0.1rem;
+  }
+  100% {
+    margin-left: 0rem;
+  }
+}
+
 @media (max-width: 1280px) {
   #add-list-btn {
     width: 50%;
@@ -441,6 +470,10 @@ li {
 @media (max-width: 780px) {
   #add-list-btn {
     width: 80%;
+  }
+
+  .input-wrapper input {
+    width: 27%;
   }
 }
 
